<resources>
    <string name="app_name">MoviesDB</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_series">Popular Series</string>
    <string name="top_rated_series">Top Rated Series</string>
    <string name="upcoming_series">Upcoming Series</string>
    <string name="movie">Movie</string>
    <string name="serie">Serie</string>
    <string name="action_categories">Sort by categories</string>
    <string name="action_popular">Sort by popularity</string>
    <string name="action_top">Sort by top rated</string>
    <string name="action_upcoming">Sort by upcoming</string>
    <string name="average_vote">Average vote:</string>
    <string name="release_date">Release date:</string>
    <string name="first_air_date">First air date:</string>
    <string name="vote_count">Votes:</string>
    <string name="popularity">Popularity:</string>
    <string name="original_language">Original Language:</string>
    <string name="overview">Overview:</string>
    <string name="title_movies">Movies</string>
    <string name="title_series">Series</string>
    <string name="cd_movies">Movies</string>
    <string name="cd_series">Series</string>
    <string name="synopsis">Synopsis</string>
    <string name="videos">Videos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
