<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_categories"
            android:orderInCategory="1"
            android:title="@string/action_categories"
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_popular"
            android:orderInCategory="1"
            android:title="@string/action_popular"/>
    <item
            android:id="@+id/action_top"
            android:orderInCategory="1"
            android:title="@string/action_top"/>
    <item
            android:id="@+id/action_upcoming"
            android:orderInCategory="1"
            android:title="@string/action_upcoming"/>
</menu>