<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".DetailActivity">

            <ImageView
                    android:id="@+id/iv_detail_serie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/serie"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    android:id="@+id/iv_detail_serie_image"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/serie"
                    android:padding="16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_serie_backdrop"/>

            <TextView
                    android:id="@+id/tv_detail_serie_vote_average_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/average_vote"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_detail_serie_vote_average"
                    app:layout_constraintStart_toEndOf="@+id/iv_detail_serie_image"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_serie_backdrop"/>

            <TextView
                    android:id="@+id/tv_detail_serie_vote_average"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_detail_serie_vote_average_label"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_serie_backdrop"/>

            <TextView
                    android:id="@+id/tv_detail_serie_first_air_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/first_air_date"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_detail_serie_first_air_date"
                    app:layout_constraintStart_toEndOf="@+id/iv_detail_serie_image"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_vote_average"/>

            <TextView
                    android:id="@+id/tv_detail_serie_first_air_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_detail_serie_first_air_date_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_vote_average"/>

            <TextView
                    android:id="@+id/tv_detail_serie_vote_count_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/vote_count"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_detail_serie_vote_count"
                    app:layout_constraintStart_toEndOf="@+id/iv_detail_serie_image"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_first_air_date"/>

            <TextView
                    android:id="@+id/tv_detail_serie_vote_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_detail_serie_vote_count_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_first_air_date"/>

            <TextView
                    android:id="@+id/tv_detail_serie_popularity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/popularity"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_detail_serie_popularity"
                    app:layout_constraintStart_toEndOf="@+id/iv_detail_serie_image"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_vote_count"/>

            <TextView
                    android:id="@+id/tv_detail_serie_popularity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_detail_serie_popularity_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_vote_count"/>

            <TextView
                    android:id="@+id/tv_detail_serie_original_language_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/original_language"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_detail_serie_original_language"
                    app:layout_constraintStart_toEndOf="@+id/iv_detail_serie_image"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_popularity"/>

            <TextView
                    android:id="@+id/tv_detail_serie_original_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_detail_serie_original_language_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_popularity"/>

            <TextView
                    android:id="@+id/tv_detail_serie_overview_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_original_language"/>

            <TextView
                    android:id="@+id/tv_detail_serie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_serie_overview_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>